# cosmic-legends-rpg-multiversx

./: .env.example  .env.local.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  LAUNCH_STRATEGY.md  LICENSE  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci-cd.yml
contracts/: Cargo.toml
contracts/ai-heroes/: Cargo.toml
contracts/ai-heroes/src/: ai_generation.rs  analytics.rs  evolution.rs  hero_management.rs  lib.rs
contracts/ai-heroes/wasm/: Cargo.toml
contracts/ai-heroes/wasm/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: constants.rs  errors.rs  events.rs  lib.rs  storage.rs  types.rs
lib/: ai-game-engine.ts  analytics.ts
public/images/: game-assets.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ai/generate/: route.ts
src/app/api/ai/heroes/: route.ts
src/app/api/battles/: route.ts
src/app/api/health/: route.ts
src/app/api/heroes/: route.ts
src/app/api/marketplace/: route.ts
src/app/api/multiversx/: route.ts
src/app/api/nft/metadata/: route.ts
src/app/game/: page.tsx
src/app/game/battle/: page.tsx
src/app/game/create-hero/: page.tsx
src/app/heroes/: page.tsx
src/app/marketplace/: page.tsx
src/components/: achievement-system.tsx  battle-arena.tsx  features.tsx  footer.tsx  game-stats.tsx  hero-cards.tsx  hero.tsx  navigation.tsx  providers.tsx  roadmap.tsx  user-dashboard.tsx  wallet-connect.tsx
src/hooks/: use-game-state.ts
src/lib/: game-utils.ts
